# TestDllnLib

./: .gitignore  CMakeLists.txt  README.md  ReadMe.txt  build.bat
MyDllAdd/: CMakeLists.txt  MyDllAdd.cpp  MyDllAdd.h
MyDllSub/: CMakeLists.txt  MyDllSub.cpp  MyDllSub.h
MyLibAdd/: CMakeLists.txt  MyLibAdd.cpp  MyLibAdd.h
MyLibSub/: CMakeLists.txt  MyLibSub.cpp  MyLibSub.h
testDllLib/: CMakeLists.txt  stdafx.cpp  testDllLib.cpp
