###MyDllAdd

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/MyDllSub)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/MyLibSub)
LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/Bin)

aux_source_directory(. DLL_SRC)

add_definitions("-DMYDLLADD_EXPORTS")

#set(LIBRARY_OUTPUT_PATH ${PROJECT_SOURCE_DIR}/Bin)

add_library(MyDllAdd SHARED ${DLL_SRC})

TARGET_LINK_LIBRARIES(MyDllAdd MyDllSub.lib MyLibSub.lib)