###MyDllAdd

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/MyDllSub)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/MyLibSub)

LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/Bin)

FILE(GLOB DLL_SRC "*.h" "*.cpp")

add_definitions("-DMYDLLADD_EXPORTS")

add_library(MyDllAdd SHARED ${DLL_SRC})

TARGET_LINK_LIBRARIES(MyDllAdd MyDllSub.lib MyLibSub.lib)