###MyLibAdd

INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/MyDllSub)
INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/MyLibSub)

LINK_DIRECTORIES(${PROJECT_SOURCE_DIR}/Bin)

FILE(GLOB LIB_SRC "*.h" "*.cpp")

add_library(MyLibAdd STATIC ${LIB_SRC})

ADD_DEPENDENCIES(MyLibAdd MyDllSub MyLibSub)
#TARGET_LINK_LIBRARIES(MyLibAdd MyDllSub.lib MyLibSub.lib) #Error!!!